--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 		 <div id="left"><a href="#">&larr;</a></div>
          <div id="right"><a href="#">&rarr;</a></div>
 
-         <div class="navbar">1&nbsp/&nbsp2&nbsp/&nbsp3&nbsp/&nbsp4&nbsp/&nbsp5</div>	
+         <div class="navbar">Thesis <i>Tomas Laar</i> &mdash; </div>	
 
 			<div class="columns">
 
     	 <script>
-             $(".columns").load("tekst.html");
+             $(".columns").load("thesis-tekst.html");
         </script>
          </div>
 
