--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		 <div id="left"><a href="#">&larr;</a></div>
          <div id="right"><a href="#">&rarr;</a></div>
 
-         <div class="navbar">Thesis <i>Tomas Laar</i> &mdash; </div>	
+         <div class="navbar">Thesis <i>Tomas Laar</i> &mdash; Letterontwerp als medium voor visuele expressie.</div>	
 
 			<div class="columns">
 
