--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Reader App</title>
+        <title>Thesis Tomas Laar</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -15,7 +15,7 @@
 		 <div id="left"><a href="#">&larr;</a></div>
          <div id="right"><a href="#">&rarr;</a></div>
 
-         <div class="navbar">Thesis <i>Tomas Laar</i> &mdash; Letterontwerp als medium voor visuele expressie.</div>	
+         <div class="navbar">Thesis <i>Tomas Laar</i> &mdash;</div>	
 
 			<div class="columns">
 
