--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -11,7 +11,7 @@
 
 			<h1>1 — INTRODUCTIE<br></h1><br><br>
 
-			<h1>1.1 — Onderwerp en fascinatie<br></h1><br><br>
+			<h1>1.1 — Onderwerp en fascinatie</h1><br>
 
 			<sup><a href="#fn1" id="ref1">1</a></sup>
 
@@ -31,8 +31,19 @@
 
 			Tijdens mijn studie Grafisch ontwerp aan kunstacademie (de Koninklijke academie van de Beeldende Kunsten) heb ik ontdekt dat mijn manier van werken en mijn visuele taal door een aantal beslissende handelingen en principes word bepaalt. Dit is niets nieuws denk ik want veelal is het zo dat grafisch ontwerpers een werkmethode hanteren waar zij zichzelf comfortabel bij voelen, een werkmethode die ontwikkelt vanuit een speciale interesse of een talent waarmee de ontwerper zichzelf kan representeren en in de meeste gevallen is hiermee ook een unieke stijl te ontwikkelen. Dat is waar bij mij de interesse voor letterontwerp is ontstaan, het sprak mij aan omdat het een rijke historie heeft en omdat het bijzonder functioneel is. Daarom heb ik mijzelf de vraag gesteld: Wat kan letterontwerp toevoegen aan de visuele expressie van een ontwerp concept? Om die vraag te beantwoorden ben ik in dit uiterst interessante onderwerp gedoken en probeer ik mijn kennis over deze discipline aan te vullen alvorens een conclusie over mijn vraag te kunnen trekken.<br><br>
 
-			Dit scriptie is opgebouwd uit …….. </h5>
+			Dit scriptie is opgebouwd uit …….. </h5><br><br>
 
+			<h1>2 — DE VORMEN VAN LETTERS.</h1><br>
+			
+			<h1>2.1 — Letterontwerp: achtergrond en Functionaliteit in grafisch ontwerp.</h1><br>
+
+			<H5>Letters hebben net als grafisch ontwerp een rijke historie en in de loop der tijd heeft het verschillende vormen aangenomen. Dit begon analoog met pen of een kwast. Net als op school leer je eerst schrijven, door die oefeningen en training kunnen we beter begrijpen waarom lettervormen de vormen hebben die ze over het algemeen hebben. Op een gegeven moment is dit proces door technologie andere vormen gaan aannemen, schrijven werd vervangen door drukken er kwam een standaardisatie van de lettervorm omdat letters ontworpen moesten worden voor de drukpers. Eerst leken deze letters nog veel op de lettervormen die ontstaat door het schrijven met de brede pen veelal gebruikt bij het kalligraferen, maar door nieuwe ontwikkelingen bedacht door Johannes Gutenberg  voor het drukken ontstond er een nieuw materiaal; losse drukletters. Door dit nieuwe materiaal ontstonden ideeën over de mogelijkheden van letters en kreeg het beroep letter ontwerper een nieuwe betekenis, goed ontworpen lettertypes waren nu nodig. Ontwerpers als Nicolas Jenson  en Francesco Griffo  staan bekend om de ontwerpen van de voor ons bekende romeinse letter vormen waarbij ze werden geïnspireerd door de romeinse steengravure. De “romein” een schreef letter domineert heel lang de typografie tot aan het begin van de 20ste eeuw als het moderne tijdperk aanbreekt.<br><br>
+
+			De ideeën van De Stijl  en Bauhaus  zijn begin 20ste eeuw overgewaaid naar alle vormen van typografie, waarbij werk experimenteel is, zich puur op functionaliteit richt of waarbij het conceptuele vormen aanneemt. Letterontwerp stond vaak op de achtergrond omdat het meestel niet de intentie heeft gehad om op de voorgrond te staan, Deze periode is voor letterontwerp een ware revolutie, letterontwerp word gebruikt als vorm van zelfpresentatie bij ontwerpers, ontwerpers creëren een eigen stijl een kenmerk zodat ze opvallen en eruit springen. De letterontwerper geeft zichzelf een hogere rol en letterontwerp functioneert steeds meer als medium voor visuele expressie en ontwerp concepten. <br><br>
+
+			In deze periode staan er ontwerpers op zoals de Duitser Peter Behrens, die met toonaangevende nieuwe en opwindende toepassingen van typografie bezig is. Het is de periode waarin de schreefloze letter zijn intrede doet. Er ontstond een Typografische hervorming. Rond de eeuwwisseling ontstond er veel meer interesse in het gebruik van schreefloze lettertypes, in Duitsland noemden men schreefloos: grotesk. Een veelgebruikte en toonaangevend lettertype dat rond die tijd wordt ontwikkeld is de Akzidenz Grotesk, een lettertype met meerdere gewichten en smallere en bredere lettervormen in een letter familie. De gebruiker kon nu contrast en nadruk met een lettertype toepassen, dit was een grote stap in eenheid en gesystematiseerde letter families. Deze nieuwe typografische toepassingen waren bijzonder handig voor grafisch ontwerpers en hielp hen enorm met typografische communicatie. <br><br>
+			
+			Vanaf die periode tot nu zijn de ontwerpen van letters alle kanten opgeschoten en van vele kanten benaderd en toegepast, maar de visuele expressie van de letters hebben altijd een sterke invloed gehad vanuit een periodiek oogpunt, de kritische reden en vanuit een esthetisch kwaliteit.</H5><br><br>
 
 			<h6>Test test test</h6>
 
