New index + text structure

--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -5,15 +5,11 @@
 				<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
 			</head>
 
-		    <body><h1>
-		    Letterontwerp als medium voor visuele expressie:<br>
-			Ontstaan vanuit een bepaalt doel door een ontwerp te versterken of door zelf het concept te zijn.</h1><br><br>
+		    <body>
 
 			<h1>1 — INTRODUCTIE<br></h1><br><br>
 
-			<h1>1.1 — Onderwerp en fascinatie</h1><br>
-
-			<sup><a href="#fn1" id="ref1">1</a></sup>
+			<h2>1.1 — Onderwerp en fascinatie</h2><br>
 
 			<h5>Grafisch Ontwerp is een erg complex en dynamisch onderwerp, het is een verreikend beroep met een brede invloed die het uitvoert met omvangrijke en creatieve vaardigheden. Door de complexiteit die het heeft en de omvangrijkheid is het daarin tegen wel een spannend en uitdagend beroep, maar zonder enige kennis van de ideeën en processen uit de geschiedenis die belangrijk zijn voor de basis van Grafisch ontwerp is het een moeilijk te begrijpen onderwerp waarbij veel mensen geen idee hebben wat het eigenlijk inhoud.<br><br>
 
@@ -23,7 +19,7 @@
 
 			Dat is waar het bij grafisch ontwerp om draait een concept op een passende manier laten communiceren en typografie en letter ontwerp is daar een medium voor. Een ontwerp maken dat geschikt is voor een bepaald doel, met een specifieke bedoeling. Daarbij moet begrepen worden waarom het gemaakt wordt en wat er gemaakt word.  Er op lettend of dit past in de uitkomst die er mee bereikt moet worden. Niet alleen maar een stijl toepassen maar opzoek gaan naar een oplossing voor het probleem en dat tackelen door de juiste bijvoorbeeld “typografische” toepassing te ontwerpen.<br><br></h5>
 
-			<h1>1.2 — Onderzoeksvraag en opbouw.</h1><br>
+			<h2>1.2 — Onderzoeksvraag en opbouw.</h2><br>
 
 			<h5>Typografie is iets waar we elke dag mee geconfronteerd worden al is het het lezen van de krant of als we online gaan, het geschreven woord opent een wereld voor ons en brengt informatie en dit doet het al generaties lang. Typografie is een dienaar die ons helpt met communicatie van inhoud met een breed scala aan onderwerpen. Nu is het zo dat de bijzonderheden van typografie veel verder gaan dan de content van een text, de esthetische kwaliteit van een lettertype wordt bereikt door een harmonieuze relatie tussen vorm, inhoud en doel.<br><br>
 
@@ -35,11 +31,11 @@
 
 			<h1>2 — DE VORMEN VAN LETTERS.</h1><br>
 			
-			<h1>2.1 — Letterontwerp: achtergrond en Functionaliteit in grafisch ontwerp.</h1><br>
+			<h2>2.1 — Letterontwerp: achtergrond en Functionaliteit in grafisch ontwerp.</h2><br>
 
-			<H5>Letters hebben net als grafisch ontwerp een rijke historie en in de loop der tijd heeft het verschillende vormen aangenomen. Dit begon analoog met pen of een kwast. Net als op school leer je eerst schrijven, door die oefeningen en training kunnen we beter begrijpen waarom lettervormen de vormen hebben die ze over het algemeen hebben. Op een gegeven moment is dit proces door technologie andere vormen gaan aannemen, schrijven werd vervangen door drukken er kwam een standaardisatie van de lettervorm omdat letters ontworpen moesten worden voor de drukpers. Eerst leken deze letters nog veel op de lettervormen die ontstaat door het schrijven met de brede pen veelal gebruikt bij het kalligraferen, maar door nieuwe ontwikkelingen bedacht door Johannes Gutenberg  voor het drukken ontstond er een nieuw materiaal; losse drukletters. Door dit nieuwe materiaal ontstonden ideeën over de mogelijkheden van letters en kreeg het beroep letter ontwerper een nieuwe betekenis, goed ontworpen lettertypes waren nu nodig. Ontwerpers als Nicolas Jenson  en Francesco Griffo  staan bekend om de ontwerpen van de voor ons bekende romeinse letter vormen waarbij ze werden geïnspireerd door de romeinse steengravure. De “romein” een schreef letter domineert heel lang de typografie tot aan het begin van de 20ste eeuw als het moderne tijdperk aanbreekt.<br><br>
+			<H5>Letters hebben net als grafisch ontwerp een rijke historie en in de loop der tijd heeft het verschillende vormen aangenomen. Dit begon analoog met pen of een kwast. Net als op school leer je eerst schrijven, door die oefeningen en training kunnen we beter begrijpen waarom lettervormen de vormen hebben die ze over het algemeen hebben. Op een gegeven moment is dit proces door technologie andere vormen gaan aannemen, schrijven werd vervangen door drukken er kwam een standaardisatie van de lettervorm omdat letters ontworpen moesten worden voor de drukpers. Eerst leken deze letters nog veel op de lettervormen die ontstaat door het schrijven met de brede pen<sup><a href="#fn1" id="ref1">1</a></sup> veelal gebruikt bij het kalligraferen, maar door nieuwe ontwikkelingen bedacht door Johannes Gutenberg  voor het drukken ontstond er een nieuw materiaal; losse drukletters. Door dit nieuwe materiaal ontstonden ideeën over de mogelijkheden van letters en kreeg het beroep letter ontwerper een nieuwe betekenis, goed ontworpen lettertypes waren nu nodig. Ontwerpers als Nicolas Jenson  en Francesco Griffo  staan bekend om de ontwerpen van de voor ons bekende romeinse letter vormen waarbij ze werden geïnspireerd door de romeinse steengravure. De “romein” een schreef letter domineert heel lang de typografie tot aan het begin van de 20ste eeuw als het moderne tijdperk aanbreekt.<br><br>
 
-			De ideeën van De Stijl  en Bauhaus  zijn begin 20ste eeuw overgewaaid naar alle vormen van typografie, waarbij werk experimenteel is, zich puur op functionaliteit richt of waarbij het conceptuele vormen aanneemt. Letterontwerp stond vaak op de achtergrond omdat het meestel niet de intentie heeft gehad om op de voorgrond te staan, Deze periode is voor letterontwerp een ware revolutie, letterontwerp word gebruikt als vorm van zelfpresentatie bij ontwerpers, ontwerpers creëren een eigen stijl een kenmerk zodat ze opvallen en eruit springen. De letterontwerper geeft zichzelf een hogere rol en letterontwerp functioneert steeds meer als medium voor visuele expressie en ontwerp concepten. <br><br>
+			De ideeën van <i>De Stijl</i>  en <i>Bauhaus</i>  zijn begin 20ste eeuw overgewaaid naar alle vormen van typografie, waarbij werk experimenteel is, zich puur op functionaliteit richt of waarbij het conceptuele vormen aanneemt. Letterontwerp stond vaak op de achtergrond omdat het meestel niet de intentie heeft gehad om op de voorgrond te staan, Deze periode is voor letterontwerp een ware revolutie, letterontwerp word gebruikt als vorm van zelfpresentatie bij ontwerpers, ontwerpers creëren een eigen stijl een kenmerk zodat ze opvallen en eruit springen. De letterontwerper geeft zichzelf een hogere rol en letterontwerp functioneert steeds meer als medium voor visuele expressie en ontwerp concepten. <br><br>
 
 			In deze periode staan er ontwerpers op zoals de Duitser Peter Behrens, die met toonaangevende nieuwe en opwindende toepassingen van typografie bezig is. Het is de periode waarin de schreefloze letter zijn intrede doet. Er ontstond een Typografische hervorming. Rond de eeuwwisseling ontstond er veel meer interesse in het gebruik van schreefloze lettertypes, in Duitsland noemden men schreefloos: grotesk. Een veelgebruikte en toonaangevend lettertype dat rond die tijd wordt ontwikkeld is de Akzidenz Grotesk, een lettertype met meerdere gewichten en smallere en bredere lettervormen in een letter familie. De gebruiker kon nu contrast en nadruk met een lettertype toepassen, dit was een grote stap in eenheid en gesystematiseerde letter families. Deze nieuwe typografische toepassingen waren bijzonder handig voor grafisch ontwerpers en hielp hen enorm met typografische communicatie. <br><br>
 			
@@ -50,14 +46,14 @@
 			<h4><img src="img/pinguin.jpg"><br>image description some info blablabla<br><br></h4>
 
 <h6><br></h6>
-			<h2>
+			<h3>
 			<sup id="fn1">1.<b>Bennett, Colin J.</b> <i>‘In Defense of Privacy: The Concept and the Regime’</i>, Surveillance & Society 8.4 (2011): 485–496.<a href= "#ref1" title="jump back to footnote 1 in the text."> &#8629; </a></sup><br>
 
 			<sup id="fn2">2.<b>Deleuze, G. and F. Guattari.</b> <i> A Thousand Plateaus: Capitalism and Schizophrenia,</i>, London: Continuum,2009 (1987).<a href= "#ref2" title="jump back to footnote 2 in the text."> &#8629; </a></sup><br>
 
 			<sup id="fn3">3.<b>Deleuze, G. and F. Guattari.</b> <i> A Thousand Plateaus: Capitalism and Schizophrenia,</i>, London: Continuum,2009 (1987).<a href= "#ref3" title="jump back to footnote 3 in the text."> &#8629; </a></sup><br><br>
 
-			</h2>
+			</h3>
 <h6><br></h6>
 			</h5>
 
