--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.scrollstop.js"></script>
+        <script type="text/javascript" src="js/javascript.js"></script>
 
 </head>
 	<body>
-		 <div id="left"><a href="#">&larr;</a></div>
-         <div id="right"><a href="#">&rarr;</a></div>
+		 
+         <div id="wrapper">
+            <div class="title"><a href="content.html">
+            <h3>Thesis &mdash; <i>Tomas Laar</i><br></h3><br>
+            <B>Letterontwerp als medium voor visuele expressie.</B><br>
+            Ontstaan vanuit een bepaalt doel door een ontwerp te versterken — of door zelf het concept te zijn.<br><br>
+            <h3>Student Grafisch Ontwerp<br><i>Koninklijke Academie Beeldende Kunst Den Haag</i></h3></a>
+            </div> 
+        </div>
 
-         <div class="navbar">Thesis <i>Tomas Laar</i> &mdash;</div>	
-
-			<div class="columns">
-
-    	 <script>
-             $(".columns").load("thesis-tekst.html");
-        </script>
-         </div>
-
-        <script type="text/javascript" src="js/javascript.js"></script>
     </body>
 </html>
