--- a/content.html
+++ b/content.html
@@ -15,7 +15,7 @@
 		 <div id="left"><a href="#">&larr;</a></div>
          <div id="right"><a href="#">&rarr;</a></div>
 
-         <div class="navbar"><h3>Thesis &mdash;<i>Tomas Laar</i></h3></div>	
+         <div class="navbar"><h3>Afstudeerscriptie &mdash;<i>Tomas Laar</i></h3></div>	
 
 			<div class="columns">
 
