--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		 
          <div id="wrapper">
             <div class="title"><a href="content.html">
-            <h3>Thesis &mdash; <i>Tomas Laar</i><br></h3><br>
+            <h3>Afstudeerscriptie &mdash; <i>Tomas Laar</i><br></h3><br>
             <B>Letterontwerp als medium voor visuele expressie.</B><br>
             Ontstaan vanuit een bepaalt doel door een ontwerp te versterken — of door zelf het concept te zijn.<br><br>
             <h3>Student Grafisch Ontwerp<br><i>Koninklijke Academie Beeldende Kunst Den Haag</i></h3></a>
