--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 		 
          <div id="wrapper">
             <div class="title"><a href="content.html">
-            <h3>Afstudeerscriptie &mdash; <i>Tomas Laar</i><br></h3><br>
-            <B>Letterontwerp als medium voor visuele expressie.</B><br>
-            Ontstaan vanuit een bepaalt doel door een ontwerp te versterken — of door zelf het concept te zijn.<br><br>
-            <h3>Student Grafisch Ontwerp<br><i>Koninklijke Academie Beeldende Kunst Den Haag</i></h3></a>
+            <h3>Afstudeerscriptie &mdash;<i>Tomas Laar</i><br><br></h3>
+            <B>Letterontwerp als vorm van visuele expressie.</B><br>
+            <h3><br>Student Grafisch Ontwerp<br><i>Koninklijke Academie Beeldende Kunst Den Haag</i></h3></a>
             </div> 
         </div>
 
