--- a/content.html
+++ b/content.html
@@ -10,8 +10,20 @@
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.scrollstop.js"></script>
 
+        <link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="css/jquery.fancybox-buttons.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="css/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
+
+        <script type="text/javascript" src="js/jquery-latest.min.js"></script>
+        <script type="text/javascript" src="js/jquery.mousewheel-3.0.6.pack.js"></script>
+        <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
+
+
 </head>
 	<body>
+        
+        <img src="img/background.jpg" id="bg" alt="">
+
 		 <div id="left"><a href="#">&larr;</a></div>
          <div id="right"><a href="#">&rarr;</a></div>
 
