--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -38,13 +38,13 @@
 
 			<div id="content" a name="content">
 				<h1>
-					<a href="#one"> INLEIDING </a> &#9658; &emsp; 
-					<a href="#two"> 1 — DE VORMEN VAN LETTERS </a> &#9658; &emsp; 
-					<a href="#three"> 2 — FUNCTIONALITEIT EN ESTHETIEK </a> &#9658; &emsp; 
-					<a href="#four"> 3 — CASESTUDIES </a> &#9658; &emsp; 
-					<a href="#five">CONCLUSIE </a> &#9658; &emsp; 
-					<a href="#six">ENGLISCH ABSTRACT</a> &#9658; &emsp; 
-					<a href="#seven"> DANKWOORD </a> &#9658; &emsp; 
+					<a href="#one"> INLEIDING </a> &emsp; 
+					<a href="#two"> 1 — DE VORMEN VAN LETTERS </a> &emsp; 
+					<a href="#three"> 2 — FUNCTIONALITEIT EN ESTHETIEK </a> &emsp; 
+					<a href="#four"> 3 — CASESTUDIES </a> &emsp; 
+					<a href="#five">CONCLUSIE </a> &emsp; 
+					<a href="#six">ENGLISCH ABSTRACT</a> &emsp; 
+					<a href="#seven"> DANKWOORD </a> &emsp; 
 					<a href="#eight">BRONNEN </a> 
 				</h1>
 			</div>
