--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -6,7 +6,7 @@
 				<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
 				<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 
-			  <!--<script>
+			  <script>
 				  $(function() {
 				    $('a[href*=#]:not([href=#])').click(function() {
 				      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
@@ -14,18 +14,18 @@
 				        var target = $(this.hash);
 				        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
 				        if (target.length) {
-				          $('body,html').animate({'scrollTop': target.offset().top}, 1000);
+				          $('body,html').animate({'scrollLeft': target.offset().left}, 1000);
 				          return false;
 				        }
 				      }
 				    });
 				  });
-				</script>-->
+				</script>
 			</head>
 
 		    <body>
 
-			<h1><p class="tab">Voorwoord</p></h1><br>
+			<h1><p class="tab">Voorwoord</p></h1>
 
 		   	<h1>Voorafgaand aan mijn laatste studiejaar was ik al enige tijd bezig om te bedenken waar mijn afstudeerscriptie over zou moeten gaan. Dat is een behoorlijke uitdaging gebleken want er zijn zo ontzettend veel opties om uit te kiezen. Telkens schieten mijn gedachten van onderwerp naar onderwerp en weet ik moeilijk een keuze te maken. Na het lezen van het <a id="single_3" href="" title="VanDerLans, R. “First Things First Revisited”, Emigre 51, 1999. p. - Zoals het manifesto zegt — wil ik mijn tijd efficiënt gebruiken, veel plezier hebben in wat ik doe, mijn vaardigheden voor een nuttig doel gebruiken en daarmee beoordelen wat mijn rol binnen grafisch ontwerp is.">First Things First manifesto (2000)</a> voelde ik de drang om deze filosofie op mezelf te reflecteren. Dat heeft mij erg geholpen bij het uitkiezen wat ik voor mijn afstudeerscriptie ben gaan onderzoeken.<br>
 
@@ -91,7 +91,7 @@
 
 				<a id="single_3" href="" title="Koninklijke Academie van de Beeldende Kunsten, Den Haag.">KABK</a>
 
-				Eind negentiende, begin twintigste eeuw is een belangrijk tijdperk voor letterontwerp. Voorafgaand aan deze periode wordt er hoofdzakelijk gebruik gemaakt van schreefletters (fig.3) in grafische toepassingen. Maar de passie voor nieuwe typografie die begin twintigste eeuw ontstond creëerde een stortvloed aan schreefloze lettertypes (fig.4). De modernistische ideeën van De Stijl en het Bauhaus zijn begin twintigste eeuw overgewaaid naar bijna alle vormen van typografie.<br>
+				Eind negentiende, begin twintigste eeuw is een belangrijk tijdperk voor letterontwerp. Voorafgaand aan deze periode wordt er hoofdzakelijk gebruik gemaakt van schreefletters (fig.3) in grafische toepassingen. Maar de passie voor nieuwe typografie die begin twintigste eeuw ontstond creëerde een stortvloed aan schreefloze lettertypes (fig.4). De modernistische ideeën van <a id="single_3" href="" title="Hurlburt, A. (1989). Layout: the design of the printed page. New York: Watson-Guptill Publications, pag. 40-42: Het Bauhaus — is samen met de De Stijl een belangrijke stroming die de nodige invloed hebben gehad op hedendaags grafisch ontwerp. Waar De Stijl meer op vorm was gericht was de Bauhaus belangrijk voor zijn samenhangende houding tegenover vorm en ruimte. Tegen de tijd dat Bauhaus haar deuren sloot was modern design een volledig ontwikkeld idee. Voor grafisch ontwerp betekende dit nieuwe ontwikkelingen in de typografie.">De Stijl en het Bauhaus</a> zijn begin twintigste eeuw overgewaaid naar bijna alle vormen van typografie.<br>
 
 				<span class="ind">Deze periode is voor letterontwerp een ware revolutie. Letterontwerp word gebruikt als vorm van zelfpresentatie, ontwerpers creëren een eigen stijl, een kenmerk zodat ze opvallen en eruit springen. De letterontwerper geeft zichzelf een hogere rol en letterontwerp functioneert steeds meer als medium voor visuele expressie. In deze periode zijn er ontwerpers zoals de Duitser Peter Behrens, die met toonaangevende nieuwe en opwindende toepassingen voor typografie bezig zijn. Het is de periode waarin de schreefloze letter zijn intrede doet, een typografische hervorming. Rond de vorige eeuwwisseling ontstond er veel meer interesse in het gebruik van deze schreefloze lettertypes omdat ze het gevoel van die periode goed weergaven.</span><br>
 
