--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -8,7 +8,7 @@
 
 		    <body>
 
-			<h1><p class="tab">Voorwoord</p></h1>
+			<h1><p class="tab" id="voorwoord">Voorwoord</p></h1>
 
 		   	<h1>Voorafgaand aan mijn laatste studiejaar was ik al enige tijd bezig om te bedenken waar mijn afstudeerscriptie over zou moeten gaan. Dat is een behoorlijke uitdaging gebleken want er zijn zo ontzettend veel opties om uit te kiezen. Telkens schieten mijn gedachten van onderwerp naar onderwerp en weet ik moeilijk een keuze te maken. Na het lezen van het <a id="single_3" href="" title="VanDerLans, R. “First Things First Revisited”, Emigre 51, 1999. p. - Zoals het manifesto zegt — wil ik mijn tijd efficiënt gebruiken, veel plezier hebben in wat ik doe, mijn vaardigheden voor een nuttig doel gebruiken en daarmee beoordelen wat mijn rol binnen grafisch ontwerp is.">First Things First manifesto (2000)</a> voelde ik de drang om deze filosofie op mezelf te reflecteren. Dat heeft mij erg geholpen bij het uitkiezen wat ik voor mijn afstudeerscriptie ben gaan onderzoeken.<br>
 
@@ -94,7 +94,7 @@
 
 			<div id="hf2"><h1><span class="ind">Functionaliteit en esthetiek</span></h1><br></div>
 
-				<a href="#content"> INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX </a> &emsp; <h1>De vormkeuze van een letter kan cruciaal zijn voor de aantrekkelijkheid en doelmatigheid van een lettertype. Daarbij gaat het niet alleen om de esthetiek van de lettervormen maar ook om wat ze kunnen presteren. Bij letters draait het vrijwel altijd om functionaliteit omdat letters er zijn om tekstuele informatie te verschaffen. Maar naast dragen van tekstuele informatie, kunnen letters ook visuele kracht bijzetten. 
+				<a href="#voorwoord"> INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX INDEX </a> &emsp; <h1>De vormkeuze van een letter kan cruciaal zijn voor de aantrekkelijkheid en doelmatigheid van een lettertype. Daarbij gaat het niet alleen om de esthetiek van de lettervormen maar ook om wat ze kunnen presteren. Bij letters draait het vrijwel altijd om functionaliteit omdat letters er zijn om tekstuele informatie te verschaffen. Maar naast dragen van tekstuele informatie, kunnen letters ook visuele kracht bijzetten. 
 
 				Verschillende lettertypes krijgen hun karakter door verschillende ideeën, eerst had dit veelal te maken met de tijdsperiode waarin ze tot stand kwamen (hoofdstuk 1.2). Maar met de tijd veranderen de conventies en met de conventies voor wat een goed lettertype is, veranderden de lettertypes. Ook in onze tijd geeft typografie aan hoe onze cultuur er voor staat, we zien een enorme diversiteit aan lettertypes. De oorzaak hiervan is dat we nu weinig tot geen gemeenschappelijke dromen hebben die begin jaren twintig voor drastische typografische veranderingen zorgden. Dit soort drastische veranderingen zullen we tegenwoordig niet snel meer ondervinden. Want ons tijdperk heeft niet zulke sterke standpunten, die periode springt eruit omdat er industrieel enorme technologische vooruitgang geboekt werd en er een nieuwe vorm van letters aan populariteit won. 
 
