--- a/content.html
+++ b/content.html
@@ -21,11 +21,11 @@
           $(function() {
             $('a[href*=#]:not([href=#])').click(function() {
               if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-
                 var target = $(this.hash);
                 target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
                 if (target.length) {
                   $('body,html').animate({'scrollLeft': target.offset().left}, 1000);
+                  console.log("Foo!");
                   return false;
                 }
               }
