--- a/content.html
+++ b/content.html
@@ -17,22 +17,26 @@
         <script type="text/javascript" src="js/jquery-latest.min.js"></script>
         <script type="text/javascript" src="js/jquery.mousewheel-3.0.6.pack.js"></script>
         <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
-        <script>
-          $(function() {
-            $('a[href*=#]:not([href=#])').click(function() {
-              if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-                if (target.length) {
-                  $('body,html').animate({'scrollLeft': target.offset().left}, 1000);
-                  console.log("Foo!");
-                  return false;
-                }
-              }
-            });
-          });
-        </script>
-    </head>
+
+                <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+
+              <script>
+                  $(function() {
+                    $('a[href*=#]:not([href=#])').click(function() {
+                      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+
+                        var target = $(this.hash);
+                        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+                        if (target.length) {
+                          $('body,html').animate({'scrollLeft': target.offset().left}, 1000);
+                          return false;
+                        }
+                      }
+                    });
+                  });
+                </script>
+
+</head>
 	<body>
         
         <img src="img/background.jpg" id="bg" alt="">
