--- a/content.html
+++ b/content.html
@@ -34,7 +34,7 @@
                       }
                     });
                   });
-                </script>
+                </script>3
 
 </head>
 	<body>
