--- a/content.html
+++ b/content.html
@@ -20,7 +20,7 @@
 
                 <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 
-              <script>
+              <!--<script>
                   $(function() {
                     $('a[href*=#]:not([href=#])').click(function() {
                       if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
@@ -34,7 +34,7 @@
                       }
                     });
                   });
-                </script>3
+                </script>-->
 
 </head>
 	<body>
