--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -49,7 +49,7 @@
 				</h1>
 			</div>
 
-				<div id="one">1<h1><p class="tab">Inleiding</p></h1></div>
+				<div id="one"><h1><p class="tab">Inleiding</p></h1></div>
 			
 
 				<h1>Grafisch ontwerp is een erg complex en dynamisch vakgebied, dat zich uit door middel van omvangrijke en creatieve vaardigheden. Zonder enige kennis van de ideeën en processen uit de geschiedenis, die belangrijk zijn voor de basis van grafisch ontwerp, is het een moeilijk te begrijpen onderwerp.</h1><br>
@@ -107,9 +107,7 @@
 
 				Letterontwerp was tot in de jaren ’80 van de 20e eeuw een analoge bezigheid. Schetsen werden handmatig getekend en wanneer goed genoeg bevonden door een letteruitgeverij pas gemaakt en uitgegeven. Maar midden jaren tachtig kwamen de eerste letterontwerp programma’s voor desktopcomputers op de markt. De letterwereld werd daardoor volledig op zijn kop gezet. De pixel en lage beeldscherm resoluties zorgden ervoor dat letterontwerpers nieuwe oplossingen moesten bedenken. Naarmate de beeldscherm resolutie toenam werd digitale typografie steeds toegankelijker. Computers werden steeds beter wat ervoor gezorgd heeft dat alle processen van letterontwerpen sneller uitgevoerd konden worden. Er ontstonden veel meer lettertypes. Maar of letters nu digitaal of handmatig gemaakt worden, de functionaliteit en de esthetiek die ze hebben komen voort uit de vormgeving, niet uit de techniek. In het volgende hoofdstuk volgt er opheldering over deze kwestie.<br><br>
 
-			<h6>&emsp;</h6>
-
-			<div id="hf2"><h1><span class="ind">Functionaliteit en esthetiek</span></h1><br></div>
+			<div id="three"><h1><span class="ind">Functionaliteit en esthetiek</span></h1><br></div>
 
 				<h1>De vormkeuze van een letter kan cruciaal zijn voor de aantrekkelijkheid en doelmatigheid van een lettertype. Daarbij gaat het niet alleen om de esthetiek van de lettervormen maar ook om wat ze kunnen presteren. Bij letters draait het vrijwel altijd om functionaliteit omdat letters er zijn om tekstuele informatie te verschaffen. Maar naast dragen van tekstuele informatie, kunnen letters ook visuele kracht bijzetten. 
 
@@ -152,7 +150,7 @@
 
 			<h6>&emsp;</h6>
 
-			<div id="hf3"><h1><span class="ind">Casestudies</span></h1><br></div>
+			<div id="four"><h1><span class="ind">Casestudies</span></h1><br></div>
 
 				<h1>Dit hoofdstuk behandelt drie lettertypes die de functionele en visuele waarde van letterontwerp benadrukken. De lettertypes zijn gekozen omdat ze drie belangrijke kanten van letterontwerp belichten. Het eerste voorbeeld: DIN is een model van lettervormen die zijn ontstaan vanuit een tijdperk. Letterontwerpers worden beïnvloed door de tijd waarin ze leven en de techniek die ze voor handen hebben. Vandaag de dag geldt dat nog steeds. Het tweede voorbeeld: Swift behandel ik omdat het uit de oude conventies geboren is, maar voor moderne toepassingen gemaakt werd. De functie waarvoor het lettertype bedoelt is, was alles bepalend voor de vormen. Het derde lettertype dat ik behandel is Dess. Een lettertype dat zo ontworpen is dat het zowel visueel en tekstueel functioneert. Het communiceert doormiddel van de inhoud van de tekst maar ook door de vormen waarmee de kijkletters gemaakt zijn.</h1><br>
 
@@ -199,7 +197,7 @@
 
 			<h6>&emsp;</h6>
 
-			<div id="con"><H1><span class="ind">Conclusie</span></H1><br></div>
+			<div id="five"><H1><span class="ind">Conclusie</span></H1><br></div>
 			
 				<h1>Door een lang proces, wat eeuwen geleden in gang gezet is, zijn de conventionele lettervormen ontstaan. Een fundament voor hedendaags letterontwerp. Het heeft typografisch ontwerp, met behulp van verschillende technische ontwikkelingen, begrijpelijk gemaakt. Lettertypes krijgen hun karakter en vorm door verschillende concepten.<br>
 
@@ -215,7 +213,7 @@
 
 			<h6>&emsp;</h6>
 
-			<div id="bron"><H1><span class="ind">Bronnen</span></H1><br></div>
+			<div id="six"><H1><span class="ind">Bronnen</span></H1><br></div>
 
 				<H2>Boeken</H2>
 				<h4>Ambrose, G. & Aono-Billson, N. (2011). Basics Graphic Design 01: Approach and Language. Zwitzerland: AVA Publishing.<br>
@@ -260,7 +258,7 @@
 
 			<h6>&emsp;</h6>
 
-			<div id="abstract"><h1><span class="ind">English abstract</span></h1></div><br>
+			<div id="seven"><h1><span class="ind">English abstract</span></h1></div><br>
 
 				<h2>Type design as a form of visual expression</h2>
 				<i>— When type becomes more than words</i><br>
@@ -279,7 +277,7 @@
 
 			<h6>&emsp;</h6>
 
-			<div id="dank"><h1><span class="ind">Dankwoord</span></h1><br></div>
+			<div id="eight"><h1><span class="ind">Dankwoord</span></h1><br></div>
 
 				<b>Dirk Vis</b> en <b>Marjan Brandsma</b> voor de scriptie begeleiding — <b>Warna Oosterbaan</b> voor zijn uiterst informatieve Een leesbare scriptie — <b>Matthias Kreutzer</b> voor het aangename gesprek en de mogelijkheid om vragen te stellen en <b>Peter Wolters</b> voor het lezen en bekritiseren van de tekst. 
 
