--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Thesis Tomas Laar</title>
+        <title>Afstudeerscriptie Tomas Laar</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -17,7 +17,7 @@
          <div id="wrapper">
             <div class="title"><a href="content.html">
             <h3>Afstudeerscriptie &mdash;<i>Tomas Laar</i><br><br></h3>
-            <B>Letterontwerp als vorm van visuele expressie.</B><br>
+            <B>Types met karakter</B><br>Letterontwerp als vorm van visuele expressie.
             <h3><br>Student Grafisch Ontwerp<br><i>Koninklijke Academie Beeldende Kunst Den Haag</i></h3></a>
             </div> 
         </div>
