--- a/content.html
+++ b/content.html
@@ -19,7 +19,7 @@
 </head>
 	<body>
         
-        <img src="img/background.jpg" id="bg" alt="">
+        <!--<img src="img/background.jpg" id="bg" alt="">-->
 
 		 <div id="left"><a href="#">&larr;</a></div>
          <div id="right"><a href="#">&rarr;</a></div>
