--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -202,14 +202,13 @@
 
 				<span class="ind">Door casestudies te doen naar verschillende lettertypes, die zijn ontstaan door verschillende motivaties, kom ik tot de volgende conclusie. Letterontwerp is een specialisatie dat tekstuele informatie visuele kracht bijzet. Typografie heeft een krachtig effect dat functioneel en visueel kan helpen. Het is daarentegen heel belangrijk dat de lettervormen ontstaan vanuit een concept en niet door toeval. Letterontwerp kan gebruikt worden als hulpmiddel voor het vertalen van talloze visuele uitingen, op zowel inhoudelijke als op visuele wijze. Het maakt visuele communicatie begrijpelijk en elegant.</span><br>
 
-				<span class="ind">Deze scriptie dient daardoor niet alleen als theoretisch onderzoek, de vormgeving communiceert door middel van typografische toepassingen op een visuele manier.</span><br></h1> 
+				<span class="ind">Deze scriptie dient daardoor niet alleen als theoretisch onderzoek, de vormgeving communiceert door middel van typografische toepassingen op een visuele manier.</span><br><br></h1> 
 
-			<h6>&emsp;</h6>
 
-			<div id="six"><h1><span class="ind">English abstract</span></h1></div><br>
+			<div id="six"><h1><span class="ind">English abstract</span></h1></div>
 
-				<h2>Type design as a form of visual expression</h2>
-				<i>— When type becomes more than words</i><br>
+				<i>Type design as a form of visual expression
+				— When type becomes more than words</i><br>
 
 				As a graphic designer, it is important to effectively communicate concepts visually. Typography is a medium that helps us with communicating of such content. It is easy to overlook type because it is everywhere. Usually, we read for content and ignore the familiar structural forms of our alphabet. Only when the characters are very large, or are presented to us in an unusual way, do we pay attention to the beautiful curves and rhythms of repetition that form our visible language. The starting point of my thesis coincided with my interest in better understanding this matter. Consequently, the research topic revolved around the question: What can type design add to visual communication? <br>
 
@@ -249,10 +248,10 @@
 
 
 				<H2>Web</H2>
-				<h4>Noble, I. & Bestley, R. (zomer 2005). Yo Wittegenstein. Geraadpleegd op 23 november 2014, van http://www.eyemagazine.com/review/article/yo-wittgenstein.<br>
-				Thomson, G. (18 Dec 2005). William Caslon IV. Geraadpleegd op 30 november 2014, van http://www.typophile.com/node/16872 <br>
-				Bilak, P. (2011). Conceptual type? Geraadpleegd op 16 december 2014, van https://www.typotheque.com/articles/conceptual_type<br>
-				Knight, C. Glaser, J.(13 april 2012). When Typography Speaks Louder Than Words. Geraadpleegd op 15 december 2014, van http://www.smashingmagazine.com/2012/04/13/when-typography-speaks-louder-than-words/</h4><br>
+				<h4>Noble, I. & Bestley, R. (zomer 2005). Yo Wittegenstein. Geraadpleegd op 23 november 2014<br>
+				Thomson, G. (18 Dec 2005). William Caslon IV. Geraadpleegd op 30 november 2014 <br>
+				Bilak, P. (2011). Conceptual type? Geraadpleegd op 16 december 2014 <br>
+				Knight, C. Glaser, J.(13 april 2012). When Typography Speaks Louder Than Words. Geraadpleegd op 15 december 2014 </h4><br>
 
 
 				<H2>Lezingen</H2>
