--- a/thesis-tekst.html
+++ b/thesis-tekst.html
@@ -207,8 +207,8 @@
 
 			<div id="six"><h1><span class="ind">English abstract</span></h1></div>
 
-				<i>Type design as a form of visual expression
-				— When type becomes more than words</i><br>
+				<i>Type design as a form of visual expression<br>
+				— When type becomes more than words</i><br><br>
 
 				As a graphic designer, it is important to effectively communicate concepts visually. Typography is a medium that helps us with communicating of such content. It is easy to overlook type because it is everywhere. Usually, we read for content and ignore the familiar structural forms of our alphabet. Only when the characters are very large, or are presented to us in an unusual way, do we pay attention to the beautiful curves and rhythms of repetition that form our visible language. The starting point of my thesis coincided with my interest in better understanding this matter. Consequently, the research topic revolved around the question: What can type design add to visual communication? <br>
 
@@ -222,7 +222,7 @@
 
 				<span class="ind">Given these points along with the research of case studies of different typefaces has helped surpass the usual understanding of the topic. Type design is a specialization that gives visual power to textual information. Typography has a powerful effect that can help both functionally and visually. In order to function properly, it is very important for the letter forms to develop from a concept. Type design can be used as a tool for translating numerous visual communications, substantive and visually. In essence, following this process makes visual communication comprehensible and elegant.</span><br><br>
 
-			<div id="seven"><h1><span class="ind">Dankwoord</span></h1><br></div>
+			<div id="seven"><h1><span class="ind">Dankwoord</span></h1></div>
 
 				<b>Dirk Vis</b> en <b>Marjan Brandsma</b> voor de scriptie begeleiding — <b>Warna Oosterbaan</b> voor zijn uiterst informatieve Een leesbare scriptie — <b>Matthias Kreutzer</b> voor het aangename gesprek en de mogelijkheid om vragen te stellen en <b>Peter Wolters</b> voor het lezen en bekritiseren van de tekst. 
 
